Added report generation service and controller